--- a/meson.build
+++ b/meson.build
@@ -1,4 +1,4 @@
-project('lmpack-wrapper', 'c',
+project('gmpack', 'c',
   version: '0.1.0',
   meson_version: '>= 0.40.0',
 )
@@ -6,7 +6,7 @@ project('lmpack-wrapper', 'c',
 config_h = configuration_data()
 config_h.set_quoted('PACKAGE_VERSION', meson.project_version())
 configure_file(
-  output: 'lmpack-wrapper-config.h',
+  output: 'gmpack-config.h',
   configuration: config_h,
 )
 
