Add a session object for RPC

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,6 +1,8 @@
 gmpack_sources = [
   'mpack.c',
   'gmpackpacker.c',
+  'gmpackmessage.c',
+  'gmpacksession.c',
   'gmpackunpacker.c',
   'main.c'
 ]
