Add async versions of session methods

--- a/src/meson.build
+++ b/src/meson.build
@@ -10,6 +10,7 @@ gmpack_sources = [
 gmpack_deps = [
   dependency('glib-2.0'),
   dependency('gobject-2.0'),
+  dependency('gio-2.0'),
 ]
 
 executable('gmpack', gmpack_sources,
