Add RPC client implementation

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,12 +1,15 @@
 gmpack_sources = [
   'mpack.c',
+  'gmpackclient.c',
   'gmpackmessage.c',
   'gmpackpacker.c',
   'gmpackserver.c',
   'gmpacksession.c',
-  'gmpackunpacker.c',
-  'main.c'
+  'gmpackunpacker.c'
 ]
+
+gmpack_main = [ 'main.c' ]
+gmpack_server = [ 'runserver.c' ]
 
 gmpack_deps = [
   dependency('glib-2.0'),
@@ -14,7 +17,12 @@ gmpack_deps = [
   dependency('gio-2.0'),
 ]
 
-executable('gmpack', gmpack_sources,
+executable('gmpack', gmpack_sources + gmpack_main,
+  dependencies: gmpack_deps,
+  install: true,
+)
+
+executable('gmpack-server', gmpack_sources + gmpack_server,
   dependencies: gmpack_deps,
   install: true,
 )
